<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">


            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/profile"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="-0dp"
                android:gravity="center"
                android:text="Hi Sakshi"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/profile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:requiresFadingEdge="vertical"
                android:src="@drawable/prof" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/title10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/where"
                android:textSize="25dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="343dp"
                android:layout_height="56dp"
                android:layout_below="@+id/title10"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edittextbg"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="10dp"
                android:hint="Search"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <TextView
                android:id="@+id/title40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="Top"
                android:textSize="20dp" />
        </RelativeLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnOrderPreserved="false"
            android:alignmentMode="alignMargins">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/can"
                        android:src="@drawable/canadabg"
                        android:layout_width="120dp"
                        android:scaleType="fitXY"
                        android:layout_height="130dp"/>
                    <TextView
                        android:id="@+id/cantxt"
                        android:layout_margin="10dp"
                        android:textSize="18sp"
                        android:text="@string/can"
                        android:gravity="center"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/us"
                        android:src="@drawable/us"
                        android:layout_width="120dp"
                        android:scaleType="fitXY"
                        android:layout_height="130dp"/>
                    <TextView
                        android:id="@+id/ustxt"
                        android:layout_margin="12dp"
                        android:textSize="18sp"
                        android:text="@string/us"
                        android:gravity="center"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </GridLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnOrderPreserved="false"
            android:alignmentMode="alignMargins">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/nz"
                        android:src="@drawable/nz"
                        android:layout_width="120dp"
                        android:scaleType="fitXY"
                        android:layout_height="130dp"/>
                    <TextView
                        android:id="@+id/nztxt"
                        android:layout_margin="12dp"
                        android:textSize="18sp"
                        android:text="@string/nz"
                        android:gravity="center"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/aus"
                        android:src="@drawable/aus"
                        android:layout_width="120dp"
                        android:scaleType="fitXY"
                        android:layout_height="130dp"/>
                    <TextView
                        android:id="@+id/austxt"
                        android:layout_margin="12dp"
                        android:textSize="18sp"
                        android:text="@string/aus"
                        android:gravity="center"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </GridLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/title30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="Most"
                android:textSize="20dp" />
        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnOrderPreserved="false"
            android:alignmentMode="alignMargins">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/sing"
                        android:src="@drawable/sing"
                        android:layout_width="120dp"
                        android:scaleType="fitXY"
                        android:layout_height="130dp"/>
                    <TextView
                        android:id="@+id/singtxt"
                        android:layout_margin="12dp"
                        android:textSize="18sp"
                        android:text="@string/sing"
                        android:gravity="center"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/ire"
                        android:src="@drawable/ireland"
                        android:layout_width="120dp"
                        android:scaleType="fitXY"
                        android:layout_height="130dp"/>
                    <TextView
                        android:id="@+id/iretxt"
                        android:layout_margin="12dp"
                        android:textSize="18sp"
                        android:text="@string/ire"
                        android:gravity="center"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </GridLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnOrderPreserved="false"
            android:alignmentMode="alignMargins">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/paris"
                        android:src="@drawable/paris"
                        android:layout_width="120dp"
                        android:scaleType="fitXY"
                        android:layout_height="130dp"/>
                    <TextView
                        android:id="@+id/paristxt"
                        android:layout_margin="12dp"
                        android:textSize="18sp"
                        android:text="@string/fr"
                        android:gravity="center"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/ams"
                        android:src="@drawable/ams"
                        android:layout_width="120dp"
                        android:scaleType="fitXY"
                        android:layout_height="130dp"/>
                    <TextView
                        android:id="@+id/amstxt"
                        android:layout_margin="12dp"
                        android:textSize="18sp"
                        android:text="@string/ams"
                        android:gravity="center"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </GridLayout>


    </LinearLayout>


</ScrollView>